--- a/app/src/main/res/layout-v26/first_activity.xml
+++ b/app/src/main/res/layout-v26/first_activity.xml
@@ -6,21 +6,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:visibility="visible"
+    android:background="@drawable/mafia_layout_background"
     tools:context=".FirstActivity">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/number_of_players_back"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
+        android:layout_below="@+id/title"
         android:layout_centerHorizontal="true"
+        app:cardBackgroundColor="#fff00000"
         >
 
         <TextView
             android:id="@+id/number_of_players"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textSize="25sp"
+            android:layout_marginLeft="3dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginRight="3dp"
+            android:layout_marginBottom="3dp"
+            android:gravity="center"
+            android:singleLine="true"
+            android:textSize="30sp"
+            android:background="@color/cardview_light_background"
             android:textColor="#fff00000"
             android:fontFamily= "@font/font_awesome_5_pro_light_300"
             android:text="\uf292"/>
@@ -30,7 +40,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/add_player_back"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="40dp"
         android:layout_below="@id/number_of_players_back"
         android:layout_width="200dp"
         android:layout_height="60dp"
@@ -50,23 +60,43 @@
             android:layout_centerHorizontal="true"
             android:hint="@string/enter_name"
             android:inputType="text"
+            android:clickable="true"
+            android:focusable="true"
+            android:imeOptions="actionNext"
             android:singleLine="true"
             android:textColor="#FF030303"
-            tools:targetApi="o" />
+            tools:targetApi="o"
+            />
 
     </androidx.cardview.widget.CardView>
 
-    <TextView
-        android:id="@+id/done_button"
-        android:layout_below="@id/add_player_back"
-        android:layout_centerInParent="true"
+    <androidx.cardview.widget.CardView
         android:layout_width="200dp"
         android:layout_height="60dp"
-        android:clickable="false"
+        android:layout_below="@+id/add_player_back"
         android:layout_marginTop="25dp"
-        android:textSize="25sp"
-        android:fontFamily= "@font/font_awesome_5_pro_light_300"
-        android:text="\uf00c" />
+        android:layout_centerHorizontal="true"
+        app:cardCornerRadius="25dp"
+        app:cardBackgroundColor="#fff00000"
+        >
+
+        <TextView
+            android:id="@+id/done_button"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="3dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginRight="3dp"
+            android:layout_marginBottom="3dp"
+            android:background="#0000ffff"
+            android:clickable="true"
+            android:focusable="true"
+            android:fontFamily="@font/font_awesome_5_pro_light_300"
+            android:gravity="center|start"
+            android:text=" \uf00c    Done"
+            android:textSize="25sp"
+            />
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/settings_button"
@@ -75,32 +105,42 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
+        android:gravity="center"
         android:layout_marginTop="5dp"
         android:layout_marginRight="5dp"
         android:layout_marginEnd="5dp"
-        android:textSize="25sp"
+        android:clickable="true"
+        android:focusable="true"
+        android:textSize="30sp"
+        android:textColor="#0A0A0A"
         android:fontFamily= "@font/font_awesome_5_pro_light_300"
         android:text="\uf1de" />
 
     <ImageView
-        android:id="@+id/mafia"
+        android:id="@+id/mafiaLogo"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="5dp"
         android:layout_marginStart="5dp"
         android:contentDescription="@string/mafia_logo"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:srcCompat="@drawable/godfather_hand_black" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/title"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
+        android:gravity="center"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="5dp"
+        android:layout_toRightOf="@+id/mafiaLogo"
+        android:layout_toEndOf="@+id/mafiaLogo"
+        android:layout_toLeftOf="@+id/settings_button"
+        android:layout_toStartOf="@+id/settings_button"
         android:layout_alignParentTop="true"
         android:textSize="25sp"
         android:text="@string/m_a_f_i_a"
-        tools:ignore="RelativeOverlap" />
+        tools:ignore="RelativeOverlap"
+        />
 
 </RelativeLayout>
