--- a/app/src/main/res/layout/second_activity.xml
+++ b/app/src/main/res/layout/second_activity.xml
@@ -94,4 +94,13 @@
             />
     </androidx.cardview.widget.CardView>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/confirm_button_back"
+        android:layout_below="@id/title"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
+        />
+
 </RelativeLayout>
