--- a/app/src/main/res/layout/first_activity.xml
+++ b/app/src/main/res/layout/first_activity.xml
@@ -46,8 +46,10 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:gravity="center"
-        android:layout_marginTop="25dp"
-        android:layout_below="@id/title"
+        android:layout_marginTop="40dp"
+        android:layout_marginLeft="5dp"
+        android:layout_below="@id/sun_or_moon_back"
+        android:layout_toRightOf="@+id/add_player_back"
         android:layout_centerHorizontal="true"
         app:cardCornerRadius="30dp"
         app:cardBackgroundColor="#6FF0E400"
@@ -76,7 +78,7 @@
         android:id="@+id/add_player_back"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
-        android:layout_below="@id/number_of_players_back"
+        android:layout_below="@id/title"
         android:layout_width="200dp"
         android:layout_height="60dp"
         app:cardBackgroundColor="#fff00000"
@@ -110,7 +112,7 @@
         android:layout_width="200dp"
         android:layout_height="60dp"
         android:layout_below="@+id/add_player_back"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="120dp"
         android:layout_centerHorizontal="true"
         app:cardCornerRadius="25dp"
         app:cardBackgroundColor="#70F00000"
@@ -163,5 +165,35 @@
         android:text="@string/m_a_f_i_a"
         tools:ignore="RelativeOverlap"
  />
+
+    <TextView
+        android:id="@+id/avatar"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:textSize="30sp"
+        android:clickable="true"
+        android:focusable="true"
+        android:gravity="center"
+        android:singleLine="true"
+        android:fontFamily= "@font/font_awesome_5_pro_light_300"
+        android:visibility="gone"
+        android:text="\uf007" />
+
+    <TextView
+        android:id="@+id/icon"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:textSize="30sp"
+        android:clickable="true"
+        android:focusable="true"
+        android:gravity="center"
+        android:singleLine="true"
+        android:fontFamily= "@font/font_awesome_5_pro_light_300"
+        android:visibility="gone"
+        android:text="\uf057" />
 
 </RelativeLayout>
