--- a/app/src/main/res/layout/player_list_item.xml
+++ b/app/src/main/res/layout/player_list_item.xml
@@ -5,9 +5,9 @@
     android:id="@+id/player_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="5dp"
-    android:layout_marginRight="5dp"
-    android:layout_marginEnd="5dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginTop="10dp"
     app:cardBackgroundColor="#FFFFE8">
 
     <RelativeLayout
@@ -15,7 +15,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/avatarOrPic"
+            android:id="@+id/avatar"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_alignParentStart="true"
@@ -32,17 +32,17 @@
             android:id="@+id/playerName"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_toLeftOf="@+id/characterImage"
-            android:layout_toStartOf="@+id/characterImage"
-            android:layout_toRightOf="@+id/avatarOrPic"
-            android:layout_toEndOf="@+id/avatarOrPic"
+            android:layout_toLeftOf="@+id/icon"
+            android:layout_toStartOf="@+id/icon"
+            android:layout_toRightOf="@+id/avatar"
+            android:layout_toEndOf="@+id/avatar"
             android:gravity="center"
             android:ellipsize="end"
             android:text="text"
             />
 
         <TextView
-            android:id="@+id/characterImage"
+            android:id="@+id/icon"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_alignParentEnd="true"
