--- a/app/src/main/res/layout/second_activity.xml
+++ b/app/src/main/res/layout/second_activity.xml
@@ -121,7 +121,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView
+            <ImageView
                 android:id="@+id/picB4Change"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
